MPS-34910 Defect in tracking editors for reload on deploy